完成了图片页面和动画页面设计

--- a/res/views/layout.html
+++ b/res/views/layout.html
@@ -9,7 +9,8 @@
 	</div>
 
 	<!-- 主体内容 -->
-	<div class="layui-body" id="LAY_app_body">
-		<div class="layadmin-tabsbody-item layui-show"></div>
+	<div id="LAY_app_body" class="layui-body">
+		<!-- class="layui-body"  -->
+		<div class="layadmin-tabsbody-item layui-show" style="background-color: #3c3c3c;"></div>
 	</div>
 </div>
