--- a/res/views/setting.html
+++ b/res/views/setting.html
@@ -1,4 +1,4 @@
-<div class="layui-fluid layui-col-xs12">
+<div class="layui-fluid layui-col-xs12" style="background-color: #ffffff; height: 100%;">
     <div class="layui-form-item">
         <div class="layui-input-group">
             <div class="layui-input-split layui-input-prefix">
