--- a/res/views/graphic.html
+++ b/res/views/graphic.html
@@ -21,6 +21,26 @@
         text-align: left; 
         padding-left: 4px;
     }
+
+    ::-webkit-scrollbar {
+        width: 6px;
+    }
+
+    ::-webkit-scrollbar-track {
+        background-color: #3c3c3c;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        background-color: rgb(130, 130, 130);
+        border-radius: 3px;
+    }
+
+    ::-webkit-scrollbar-button {
+        /* 上下按钮 */
+        /* background-color: white; */
+        display: none;
+    }
+
 </style>
 
 <div class="layui-row layui-col-space4" style="margin-top: 4px;">
@@ -130,11 +150,14 @@
 
 <script>
     let $, layer, table;
+    let inst;
+    let curRow = null;
+
     layui.use(function () {
         $ = layui.$;
         layer = layui.layer;
         table = layui.table;
-        let inst = table.render({
+        inst = table.render({
             elem: '#data-list',
             defaultToolbar: [],
             align:'left',
@@ -188,12 +211,12 @@
 
 
         table.on('row(data-list)', function(obj){
-            // console.log(obj);
             // layer.msg(JSON.stringify(obj.data));
 
             // var data = obj.data; // 得到当前行数据
             // var dataCache = obj.dataCache; // 得到当前行缓存数据，包含特定字段 --- 2.8.8+
-            // var index = obj.index; // 得到当前行索引
+            // var index = obj.index;
+            curRow = obj.index; // 得到当前行索引
             // var tr = obj.tr; // 得到当前行 <tr> 元素的 jQuery 对象
             // var options = obj.config; // 获取当前表格基础属性配置项
             // console.log({data, dataCache, index, tr, options}); // 查看对象所有成员
@@ -201,12 +224,51 @@
             // obj.del() // 删除当前行
             // obj.update(fields, related);  // 修改行数据
             obj.setRowChecked({type: 'radio'}); // 设置行选中状态, radio 单选模式；checkbox 复选模式
-
-
+            celOnSelect(obj.data);
         });
 
         table.on('rowContextmenu(data-list)', function(obj){
             obj.setRowChecked({type: 'checkbox'});
         });
     });
+
+    
+    
+    document.onkeyup = function (e) {
+        if (!(e.keyCode == 38 || e.keyCode == 40)) {
+            return;
+        }
+
+        let maxLen = inst.config.data.length;
+
+        if (curRow == null){
+            curRow = 0;
+        }else{
+            if (e.keyCode === 38){
+                curRow--;
+                curRow = curRow < 0 ? maxLen - 1 : curRow;
+            }else if (e.keyCode === 40){
+                curRow++;
+                curRow = curRow >= maxLen ? 0 : curRow;
+            }
+        }
+
+        table.setRowChecked('data-list', {index: curRow, type: 'radio' });
+        celOnSelect(inst.config.data[curRow]);
+
+        // 如果当前选择的tr不在可视区域内，则滚动到可视区域内
+        let tr = $(`tr[data-index=${curRow}]`);
+        let _table = tr[0].parentNode.parentNode.parentNode;
+
+        if(tr[0].offsetTop + tr.height() > _table.scrollTop + _table.clientHeight){
+            _table.scrollTop = tr[0].offsetTop + tr.height() - _table.clientHeight;
+        }else if(tr[0].offsetTop < _table.scrollTop){
+            _table.scrollTop = tr[0].offsetTop;
+        }
+    };
+
+    // cel选中事件回调
+    function celOnSelect(data){
+        console.log({data});
+    }
 </script>
