--- a/res/views/layout.html
+++ b/res/views/layout.html
@@ -14,3 +14,10 @@
 		<div class="layadmin-tabsbody-item layui-show" style="background-color: #3c3c3c;"></div>
 	</div>
 </div>
+
+
+<script>
+	let $, layer;
+
+
+</script>
