更新示意图

--- a/res/views/anime.html
+++ b/res/views/anime.html
@@ -160,7 +160,8 @@
         </div>
     </div>
 
-    <div class="layui-col-xs9" style="height:542px; background-image: url(res/images/canvasBg.jpg); background-repeat: no-repeat; background-size: cover;">
+    <div class="layui-col-xs9" style="height:542px; background-color: black;">
+        <!--  background-image: url(res/images/canvasBg.jpg); background-repeat: no-repeat; background-size: cover; -->
         <canvas id="a_canvas" style="width: 100%; height: 542px;"></canvas>
     </div>
 </div>
