--- a/res/views/graphic.html
+++ b/res/views/graphic.html
@@ -138,7 +138,8 @@
         </div>
     </div>
 
-    <div class="layui-col-xs9" style="height:542px; background-image: url(res/images/canvasBg.jpg); background-repeat: no-repeat; background-size: cover;">
+    <div class="layui-col-xs9" style="height:542px; background-color: black;">
+        <!--  background-image: url(res/images/canvasBg.jpg); background-repeat: no-repeat; background-size: cover; -->
         <canvas id="g_canvas"></canvas>
     </div>
 
